==> jminor717/esp32_Drone/Common/Submodules/RadioHead/RH_RF69.c <==
#include "string.h"
#include "RH_RF69.h"
#include "config/pin_config.h"
#include "esp_intr_alloc.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/gpio.h"
#include "driver/spi_master.h"
#define CONFIG_FSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_NONE)
#define CONFIG_GFSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_BT1_0)
#define CONFIG_OOK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_OOK | RH_RF69_DATAMODUL_MODULATIONSHAPING_OOK_NONE)
#define CONFIG_NOWHITE (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_NONE | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_WHITE (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_WHITENING | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_MANCHESTER (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_MANCHESTER | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)

void readFifo()
{
    uint8_t *dat, *dout;
    // allocate arrays as RH_RF69_FIFO_SIZE + 1 to account for the RH_RF69_REG_00_FIFO byte
    dout = (uint8_t *)heap_caps_malloc(sizeof(uint8_t) * RH_RF69_FIFO_SIZE + 1, MALLOC_CAP_DMA);
    dat = (uint8_t *)heap_caps_malloc(sizeof(uint8_t) * RH_RF69_FIFO_SIZE + 1, MALLOC_CAP_DMA);
    memset(dat, 0, RH_RF69_FIFO_SIZE + 1);
    memset(dout, 0, RH_RF69_FIFO_SIZE + 1);
    dat[0] = RH_RF69_REG_00_FIFO;
    esp_err_t ret;
    spi_transaction_t tLen;
    spi_transaction_t tFifo;
    gpio_set_level(_slaveSelectPin, 0);

    memset(&tLen, 0, sizeof(tLen));
    memset(&tFifo, 0, sizeof(tFifo));
    tLen.tx_buffer = dat;
    tLen.rx_buffer = dout;
    tLen.length = 2 * 8;
    tFifo.tx_buffer = dat + 2; // just reuse the previously allocated memory
    tFifo.rx_buffer = dout + 2;
    ret = spi_device_polling_transmit(RFM69spi, &tLen); // read the first byte of the fifo to determine how long the received packet is
    assert(ret == ESP_OK);
    tFifo.length = dout[1] * 8;
    ret = spi_device_polling_transmit(RFM69spi, &tFifo); // read the rest of the fifo
    assert(ret == ESP_OK);
    // ets_delay_us(80);

    gpio_set_level(_slaveSelectPin, 1);
    //_rxGood++;
    _rxBufValid = true;
    // _rxHeaderFrom = dout[2];
    // _rxHeaderId = dout[3];
    // _rxHeaderFlags = dout[4];
    memcpy(_buf, dout + 2, dout[1] - 2);
    //  Any junk remaining in the FIFO will be cleared next time we go to receive mode.
}

void setModeRx()
{
    if (_mode != RHModeRx)
    {
        if (_paInHighPowerMode && _power >= 18)
        {
            _paInHighPowerMode = false;
            // If high power boost, return power amp to receive mode
            spiWrite(RH_RF69_REG_5A_TESTPA1, RH_RF69_TESTPA1_NORMAL);
            spiWrite(RH_RF69_REG_5C_TESTPA2, RH_RF69_TESTPA2_NORMAL);
        }
        spiWrite(RH_RF69_REG_25_DIOMAPPING1, RF69_DIO0_PayloadReady_TxReady); // Set interrupt line 0 PayloadReady
        setOpMode(RH_RF69_OPMODE_MODE_RX, true);                              // Clears FIFO
        _mode = RHModeRx;
    }
}

void setModeTx(bool waitForModeReady)
{
    if (_mode != RHModeTx)
    {
        if (!_paInHighPowerMode && _power >= 18)
        {
            _paInHighPowerMode = true;
            // Set high power boost mode
            // Note that OCP defaults to ON so no need to change that.
            spiWrite(RH_RF69_REG_5A_TESTPA1, RH_RF69_TESTPA1_BOOST);
            spiWrite(RH_RF69_REG_5C_TESTPA2, RH_RF69_TESTPA2_BOOST);
        }
        spiWrite(RH_RF69_REG_25_DIOMAPPING1, RF69_DIO0_CrcOk_PacketSent); // Set interrupt line 0 PacketSent
        setOpMode(RH_RF69_OPMODE_MODE_TX, waitForModeReady);              // Clears FIFO
        _mode = RHModeTx;
    }
}

bool send(const uint8_t *data, uint8_t len)
{
    if (len > RH_RF69_MAX_ENCRYPTABLE_PAYLOAD_LEN)
        return false;

    // waitPacketSent(); // Make sure we dont interrupt an outgoing message
    setModeIdle(); // Prevent RX while filling the fifo

    // if (!waitCAD())
    //     return false; // Check channel activity

    uint8_t *dat, *dout;
    // allocate arrays as RH_RF69_FIFO_SIZE + 1 to account for the RH_RF69_REG_00_FIFO byte
    dout = (uint8_t *)heap_caps_malloc(sizeof(uint8_t) * RH_RF69_FIFO_SIZE + 1, MALLOC_CAP_DMA);
    dat = (uint8_t *)heap_caps_malloc(sizeof(uint8_t) * RH_RF69_FIFO_SIZE + 1, MALLOC_CAP_DMA);
    //  memset(dat, 0, RH_RF69_FIFO_SIZE + 1);
    memset(dout, 0, RH_RF69_FIFO_SIZE + 1);
    dat[0] = RH_RF69_REG_00_FIFO | RH_RF69_SPI_WRITE_MASK;
    dat[1] = len;
    memcpy(dat + 1, data, len);

    // len += RH_RF69_HEADER_LEN;
    //  dat[1] = _txHeaderTo;
    //  dat[2] = _txHeaderFrom;
    //  dat[3] = _txHeaderId;
    //  dat[4] = _txHeaderFlags;

    esp_err_t ret;
    spi_transaction_t tFifo;
    gpio_set_level(_slaveSelectPin, 0);

    memset(&tFifo, 0, sizeof(tFifo));
    tFifo.tx_buffer = dat; // just reuse the previously allocated memory
    tFifo.rx_buffer = dout;
    tFifo.length = len * 8;

    setModeTx(false);                                    // Start the transmitter without waiting so that we start filing the fifo before the device is ready to transmit
    ret = spi_device_polling_transmit(RFM69spi, &tFifo); // read the rest of the fifo
    assert(ret == ESP_OK);
    // ets_delay_us(80);

    gpio_set_level(_slaveSelectPin, 1);

    return true;
}
